--- a/style.css
+++ b/style.css
@@ -8,6 +8,7 @@
 
 html,body{
     background-color: #000000; 
+   
 }
 
 .head{
@@ -25,6 +26,12 @@ html,body{
     right: 0;
     overflow: auto;
 }
+@media screen and (max-width: 600px) {
+    .container{
+        padding: 0 10px 0 10px;
+    }
+}
+    
 .container::-webkit-scrollbar {
     display: none;
 }
