--- a/style.css
+++ b/style.css
@@ -1,9 +1,8 @@
-@import url('https://allfont.net/allfont.css?fonts=league-spartan');
 @import url('https://fonts.googleapis.com/css?family=Karla:400,700&display=swap');
 :root {
     --bgColor:#1C1C1C;
     --accentColor: #E6E6E6;
-    --font:  'League Spartan Bold', arial;
+    --font:   arial;
 }
 
 html,body{
